shellfiles = \
    shell/artifact_export_bin.sh \
    shell/artifact_export_pkg_deb.sh \
    shell/artifact_export_pkg_rpm.sh \
    shell/artifact_export_pkg_srpm.sh \
    shell/artifact_export_prep.sh \
    shell/artifact_export.sh \
    shell/artifact_export_src.sh \
    shell/artifact_setup_dpkg.sh \
    shell/artifact_setup.sh \
    shell/autotools_branch_version.sh \
    shell/build_autotools_autogen.sh \
    shell/build_autotools_configure.sh \
    shell/build_autotools_default.sh \
    shell/build_autotools_make_package_scientific_6.sh \
    shell/build_autotools_make.sh \
    shell/build_autotools_tag_scientific.sh \
    shell/build_docbook_default.sh \
    shell/build_docbook_vmim.sh \
    shell/build_env_flavor.sh \
    shell/build_env_os.sh \
    shell/build_env_release.sh \
    shell/build_python_artifacts.sh \
    shell/build_python_bdist_rename_development.sh \
    shell/build_python_bdist_rename_production.sh \
    shell/build_python_bdist.sh \
    shell/build_python_package_deb.sh \
    shell/build_python_package_development_rpm.sh \
    shell/build_python_package_production_rpm.sh \
    shell/build_python_sdist_rename_development.sh \
    shell/build_python_sdist_rename_production.sh \
    shell/build_python_sdist.sh \
    shell/checkout_date.sh \
    shell/chroot-debian-wheezy-freshen.sh \
    shell/chrootes_git_checkout_development.sh \
    shell/chroot-imagelist-update.sh \
    shell/chroot_packages_install_debian.sh \
    shell/chroot_packages_install_scientific.sh \
    shell/chroot-scientific-6-repo.sh \
    shell/chroot-test-vmcatcher-scientific-6-prod.sh \
    shell/dirvacua-debian-wheezy-prod-chrooted.sh \
    shell/dirvacua-debian-wheezy-prod-part-02.sh \
    shell/dirvacua-debian-wheezy-prod-part-03.sh \
    shell/dirvacua-debian-wheezy-prod-part-04.sh \
    shell/dirvacua-scientific-6-prod.sh \
    shell/dirvacua-scientific-6-trunk.sh \
    shell/docbook-production-deps.sh \
    shell/docbook-production.sh \
    shell/export_directories_dpkg.sh \
    shell/export_directories.sh \
    shell/export_docbook_branch.sh \
    shell/export_docbook_tag.sh \
    shell/export_package_debian.sh \
    shell/export_python_branch_srpm_scientific.sh \
    shell/export_python_tag_deb_stdeb.sh \
    shell/export_python_tag_srpm_scientific_6.sh \
    shell/GenChroot.debian-wheezy-part-01.sh \
    shell/GenChroot.debian-wheezy-part-02.sh \
    shell/GenChroot.debian-wheezy-part-03.sh \
    shell/GenChroot.debian-wheezy-part-04.sh \
    shell/GenChroot.SL-6X.sh \
    shell/git_checkout_branch.sh \
    shell/git_checkout_development.sh \
    shell/git_checkout_pkg_development.sh \
    shell/git_checkout_tag.sh \
    shell/grid-virt-sort-debian-wheezy-prod-deb-build.sh \
    shell/grid-virt-sort-debian-wheezy-prod-deb-dependencies.sh \
    shell/grid-virt-sort-debian-wheezy-prod-deb-export.sh \
    shell/grid-virt-sort-debian-wheezy-prod-part-02.sh \
    shell/grid-virt-sort-debian-wheezy-prod-part-03.sh \
    shell/grid-virt-sort-scientific-6-prod.sh \
    shell/grid-virt-sort-scientific-6-trunk.sh \
    shell/hepixvmitrust-debian-wheezy-prod-chroot.sh \
    shell/hepixvmitrust-debian-wheezy-prod-part-02.sh \
    shell/hepixvmitrust-debian-wheezy-prod-part-03.sh \
    shell/hepixvmitrust-scientific-6-prod.sh \
    shell/hepixvmitrust-scientific-6-trunk.sh \
    shell/nosetests_python.sh \
    shell/publish-image-overlay-debian.sh \
    shell/repo-scientific.sh \
    shell/squeezytray_autogen.sh \
    shell/svn_checkout_tag.sh \
    shell/svn_checkout_trunk.sh \
    shell/tests_skip.sh \
    shell/tests_unit_python_tox_env_debian_8.sh \
    shell/tests_unit_python_tox_env_debian_9.sh \
    shell/tests_unit_python_tox_env_fedora_24.sh \
    shell/tests_unit_python_tox_env_opensuse_42.sh \
    shell/tests_unit_python_tox_env_scientific_7.sh \
    shell/tests_unit_python_tox_noop.sh \
    shell/tests_unit_python_tox.sh \
    shell/unit_tests_python_tox_env.sh \
    shell/unit_tests_python_tox_workspace.sh \
    shell/vmcaster-debian-wheezy-prod-chroot.sh \
    shell/vmcaster-debian-wheezy-prod-part-02.sh \
    shell/vmcaster-debian-wheezy-prod-part-03.sh \
    shell/vmcaster-debian-wheezy-prod-part-04.sh \
    shell/vmcaster-scientific-6-prod-part-02.sh \
    shell/vmcaster-scientific-6-trunk-part-02.sh


jobfiles = \
    job/artifact_export_bin.json \
    job/artifact_export_generic.json \
    job/artifact_export.json \
    job/artifact_export_pkg_deb.json \
    job/artifact_export_pkg.json \
    job/artifact_export_pkg_rpm.json \
    job/artifact_export_prep.json \
    job/artifact_export_spkg.json \
    job/artifact_export_spkg_srpm.json \
    job/artifact_export_src.json \
    job/artifact_setup_dpkg.json \
    job/artifact_setup.json \
    job/autotools_branch_version.json \
    job/autotools_development_version.json \
    job/autotools_tag_version.json \
    job/branch_testing.json \
    job/build_autotools_autogen.json \
    job/build_autotools_configure.json \
    job/build_autotools_default.json \
    job/build_autotools_make.json \
    job/build_autotools_make_package_default.json \
    job/build_autotools_make_package_rpm.json \
    job/build_docbook_default.json \
    job/build_docbook_vmim.json \
    job/build_env_discover.json \
    job/build_env_flavor.json \
    job/build_env_os.json \
    job/build_env_release.json \
    job/build_python_artifacts.json \
    job/build_python_bdist.json \
    job/build_python_bdist_rename_branch.json \
    job/build_python_bdist_rename_development.json \
    job/build_python_bdist_rename_production.json \
    job/build_python_default.json \
    job/build_python_package_branch_rpm.json \
    job/build_python_package_deb.json \
    job/build_python_package_default.json \
    job/build_python_package_development_rpm.json \
    job/build_python_package_tag_rpm.json \
    job/build_python_sdist.json \
    job/build_python_sdist_rename_branch.json \
    job/build_python_sdist_rename_development.json \
    job/build_python_sdist_rename_production.json \
    job/checkout_date.json \
    job/checkout_source.json \
    job/chroot_packages_install_debian.json \
    job/chroot_packages_install_scientific.json \
    job/export_directories_branch.json \
    job/export_directories_dpkg.json \
    job/export_directories.json \
    job/export_docbook_branch.json \
    job/export_docbook_tag.json \
    job/export_package_branch_srpm.json \
    job/export_package_debian.json \
    job/export_package_scientific7_branch_srpm.json \
    job/export_package_scientific7_tag_srpm.json \
    job/export_package_tag_srpm.json \
    job/export_python_tag_deb_stdeb.json \
    job/git_checkout_branch.json \
    job/git_checkout_tag.json \
    job/git_checkout_test.json \
    job/git_checkout_trunk.json \
    job/svn_checkout_master.json \
    job/svn_checkout_tag.json \
    job/tests_autotools.json \
    job/tests_python.json \
    job/tests_skip.json \
    job/tests_unit_python_tox_env_debian_8.json \
    job/tests_unit_python_tox_env_debian_9.json \
    job/tests_unit_python_tox_env_fedora_24.json \
    job/tests_unit_python_tox_env_fedora_25.json \
    job/tests_unit_python_tox_env.json \
    job/tests_unit_python_tox_env_opensuse_42.json \
    job/tests_unit_python_tox_env_scientific_7.json \
    job/tests_unit_python_tox.json \
    job/tests_unit_python_tox_sl6.json \
    job/unit_tests_python_tox_workspace.json \
    job/whenenv.json \
    job/whenenv_source.json


job_DATA = $(jobfiles)
shell_DATA = $(shellfiles)
EXTRA_DIST = $(jobfiles_DATA) $(shellfiles_DATA)



check:
	echo no check yet
